# CMakeList.txt : CMake project for work-with-path, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("work-with-path")

# Add source to this project's executable.
add_executable (work-with-path "work-with-path.cpp" "work-with-path.h")

# TODO: Add tests and install targets if needed.
